--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
 
       <button data-aos="fade-up" data-aos-duration="1900" class="btn  m-auto conhecer "><a href="#sectionSobre">CONHECER NOSSA HISTÓRIA</a> </button>
       </div>
+
+      <i id="arrow" class="fa-solid fa-angle-down animar"></i>
      </aside>
 
-
-
+     
 
       </section>
 
