--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Santissimo Sacramento</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="style.css/style.css">
+    <link rel="stylesheet" type="text/css" href="./style.css/style.css">
     <link rel="stylesheet" type="text/css" href="./style.css/corrosel.css">
     <link rel="stylesheet" type="text/css" href="./js/script.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,6 +47,10 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="sobre.html">Sobre</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="orações.html">Orações</a>
         </li>
        
         <li class="nav-item">
@@ -348,7 +352,7 @@
   <nav id="menufooter" class="nav flex-column ">
   <a class="nav-link" href="#">Home</a>
   <a class="nav-link" href="#">Sobre</a>
-  <a class="nav-link" href="#">Serviços</a>
+  <a class="nav-link" href="orações.html">Orações</a>
   <a class="nav-link" href="#">Contato</a>
 </nav>
 
