--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         </li>
 
         <li class="nav-item">
+          <a class="nav-link" href="galeria.html">Galeria</a>
+        </li>
+
+        <li class="nav-item">
           <a class="nav-link" href="orações.html">Orações</a>
         </li>
        
@@ -352,6 +356,7 @@
   <nav id="menufooter" class="nav flex-column ">
   <a class="nav-link" href="#">Home</a>
   <a class="nav-link" href="#">Sobre</a>
+   <a class="nav-link" href="galeria.html">Galeria</a>
   <a class="nav-link" href="orações.html">Orações</a>
   <a class="nav-link" href="#">Contato</a>
 </nav>
